--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,11 +22,9 @@ dependencies:
   image_picker: ^1.2.0
   dotted_border: ^2.0.0
   pin_code_fields: ^8.0.1
+  circular_countdown_timer: ^0.2.4
 
-<<<<<<< HEAD
 
-=======
->>>>>>> a01036d574baf110a47ab371cf294102041c9ba7
 dev_dependencies:
   flutter_test:
     sdk: flutter
